style: formatting in styles.css

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <div class="feedback"></div>
         </div>
         <form class="action">
-          <input class="action__message" id="userMessage" type="text" />
+          <input class="action__message" id="userMessage" autofocus type="text" />
           <button class="action__send" id="send">Send</button>
         </form>
       </div>
